[package]
name = "sqlx-ledger-cel-interpreter"
description = "An interpreter for the Common Expression Language (CEL)"
repository = "https://github.com/GaloyMoney/sqlx-ledger"
version = "0.5.13-dev"
edition = "2021"
license = "MIT"
categories = ["parsing", "cel"]

[features]

fail-on-warnings = []

[dependencies]
cel-parser = { path = "../cel-parser", package = "sqlx-ledger-cel-parser", version = "0.5.13-dev" }

chrono = "0.4.22"
rust_decimal = "1.26.1"
serde = "1.0.147"
serde_json = "1.0.87"
thiserror = "1.0.37"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
