[package]
name = "sqlx-ledger-cel-interpreter"
description = "An interpreter for the Common Expression Language (CEL)"
repository = "https://github.com/GaloyMoney/sqlx-ledger"
version = "0.8.4-dev"
edition = "2021"
license = "MIT"
categories = ["parsing", "cel"]

[features]

fail-on-warnings = []

[dependencies]
cel-parser = { path = "../cel-parser", package = "sqlx-ledger-cel-parser", version = "0.8.4-dev" }

chrono = "0.4"
rust_decimal = "1.30"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.3", features = ["serde", "v4"] }
