[package]
name = "sqlx-ledger-cel-parser"
description = "A parser for the Common Expression Language (CEL)"
repository = "https://github.com/GaloyMoney/sqlx-ledger"
version = "0.8.0"
authors = ["Justin Carter <justin@galoy.io>"]
edition = "2021"
license = "MIT"
categories = ["parsing", "cel"]

[features]

fail-on-warnings = []

[dependencies]
lalrpop-util = { version = "0.19.12", features = ["lexer"] }

[build-dependencies]
lalrpop = { version = "0.19.12", features = ["lexer"] }
