[package]
name = "sqlx-ledger-cel-parser"
description = "A parser for the Common Expression Language (CEL)"
repository = "https://github.com/GaloyMoney/sqlx-ledger"
version = "0.11.5"
authors = ["Justin Carter <justin@galoy.io>"]
edition = "2021"
license = "MIT"
categories = ["parsing"]

[features]

fail-on-warnings = []

[dependencies]
lalrpop-util = { version = "0.22", features = ["lexer"] }

[build-dependencies]
lalrpop = { version = "0.22", features = ["lexer"] }
