[package]
name = "sqlx-ledger"
description = "An embeddable double sided accounting ledger built on PG/SQLx"
repository = "https://github.com/GaloyMoney/sqlx-ledger"
documentation = "https://docs.rs/sqlx-ledger"
readme = "../README.md"
version = "0.5.11-dev"
edition = "2021"
license = "MIT"
categories = ["accounting", "ledger"]

[features]

fail-on-warnings = []

[dependencies]
cel-interpreter = { path = "../cel-interpreter", package = "sqlx-ledger-cel-interpreter", version = "0.5.11-dev" }

chrono = { version = "0.4.22", features = ["serde"] }
rust_decimal = "1.26.1"
derive_builder = "0.12.0"
serde = "1.0.147"
serde_json = "1.0.87"
sqlx = { version = "0.6", features = [ "offline", "runtime-tokio-rustls", "postgres", "decimal", "uuid", "chrono", "json" ] }
thiserror = "1.0.37"
tokio = { version = "1.24", features = ["macros"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }
rusty-money = { version = "0.4.1", features = ["iso", "crypto"] }
tracing = "0.1.37"
cached = "0.42.0"


[dev-dependencies]
anyhow = "1.0.66"
rand = "0.8.5"
tokio-test = "0.4.2"
