[package]
name = "sqlx-ledger"
description = "An embeddable double sided accounting ledger built on PG/SQLx"
repository = "https://github.com/GaloyMoney/sqlx-ledger"
documentation = "https://docs.rs/sqlx-ledger"
readme = "../README.md"
version = "0.11.3-dev"
edition = "2021"
license = "MIT"
categories = ["accounting", "ledger"]

[features]

fail-on-warnings = []
otel = ["opentelemetry", "tracing-opentelemetry"]

[dependencies]
cel-interpreter = { path = "../cel-interpreter", package = "sqlx-ledger-cel-interpreter", version = "0.11.3-dev" }

chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.30"
derive_builder = "0.12"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "rust_decimal", "uuid", "chrono", "json" ] }
thiserror = "1.0"
tokio = { version = "1.28", features = ["macros"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
rusty-money = { version = "0.4", features = ["iso", "crypto"] }
tracing = "0.1"
opentelemetry = { version =  "0.21", optional = true }
tracing-opentelemetry = { version = "0.22", optional = true }
cached = { version = "0.49", features = ["async"] }


[dev-dependencies]
anyhow = "1.0"
rand = "0.8"
tokio-test = "0.4"
